# NeoXtractor

./: .gitignore  README.md  args.py  config.json  converter.py  decompression.py  decryption.py  detection.py  extractor.py  key.py  logger.py  main.py  main.spec  pylintrc  pyproject.toml  requirements.txt  rotor.py  settings.json  test_npk_directly.py  utils.py
.github/workflows/: build.yml  ci.yml  release.yml
_temporary_tools_/: README.txt  qt_icon_showcase.py  test_npk_directly.py
bindict/: __init__.py
configs/: IDV_config.json  KEY_-250.json  KEY_150.json  OH_config.json  OMJ_config.json  default.json  generic_config.json  harrypotter.json  infla.json  omy_omrc.json  onmyoji.json  smc.json  wj.json
core/: args.py  binary_readers.py  build_info.py  config.py  file.py  images.py  logger.py  rotor.py  utils.py
core/_patches/: __init__.py  archspec.py
data/: ext_lang_map.json
gui/: __init__.py  camera.py  config_manager.py  extraction_tab.py  fonts.py  help.py  hex_tab.py  hex_viewer.py  main_window.py  mesh_tab.py  npk_entry_filter.py  plain_text_viewer.py  popups.py  qt_theme.py  raw_hex_viewer.py  scene.py  settings_manager.py  text_tab.py  texture_tab.py  texture_viewer.py  viewer_3d.py
hooks/: hook-bitstring.py
info/: about_info.txt  decryption_manager_info.txt  keys.txt
shader/: basic_w_norm.frag  basic_w_norm.vert  line.frag  line.vert
shaders/: color.frag  color.vert  colored_vertices.frag  colored_vertices.vert  mesh.frag  mesh.vert  point.frag  point.vert  point_d3d.frag  point_d3d.vert  text.frag  text.vert
tools/: README.txt  build_info_tool.py  build_shaders.py
utils/: config_manager.py  console_handler.py  extractor_utils.py  filename.json  image_converters.py  last_config.json  npk_reader.py  read_nxfn.py  util.py
(+140 files in other folders)
