[project]
name = "neoxtractor"
version = "3.0.1"
description = "NeoX NXPK / EXPK (.npk) extraction and viewer tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arc4>=0.5.0",
    "bitstring>=4.4.0",
    "lz4>=4.4.5",
    "numpy>=2.4.4",
    "p>=1.5.0",
    "pillow>=12.2.0",
    "pycryptodome>=3.23.0",
    "pymeshio>=3.0.1",
    "pyside6>=6.11.0",
    "zstandard>=0.25.0",
    "texture2ddecoder>=1.0.6",
    "cryptography>=46.0.7",
]

[tool.uv]
# Require that the package is available on the following platforms:
required-environments = [
    # macOS on Apple Silicon (ARM)
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
